--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <!-- Goodsoul_html/about.html  20 Nov 2019 03:30:27 GMT -->
 <head>
 <meta charset="utf-8">
-<title>Goodsoul HTML Template</title>
+<title>Heal African Orphans Charity</title>
 
 <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
 <link rel="icon" href="images/favicon.png" type="image/x-icon">
@@ -261,7 +261,7 @@
     </section>
 
     <!-- Page Title -->
-    <section class="page-title" style="background-image:url(images/background/bg-13.jpg)">
+    <section class="page-title" style="background-image:url()">
         <div class="auto-container">
             <div class="content-box">
                 <h1>Know About Us</h1>
@@ -463,7 +463,7 @@
                     <div class="inner-box wow fadeInDown" data-wow-delay="200ms">
                         <div class="image"><a href="#"><img src="images/resource/team-1.jpg" alt=""></a></div>
                         <div class="lower-content">
-                            <h4> <a href="#">Benjie Alphonso</a></h4>
+                            <h4> <a href="#">Mafabi Adi</a></h4>
                             <div class="designation">Founder</div>
                         </div>
                         <ul class="social-icon-two">
@@ -479,7 +479,7 @@
                     <div class="inner-box wow fadeInUp" data-wow-delay="400ms">
                         <div class="image"><a href="#"><img src="images/resource/team-2.jpg" alt=""></a></div>
                         <div class="lower-content">
-                            <h4> <a href="#">Ivor Herbert</a></h4>
+                            <h4> <a href="#">Kizito Salem</a></h4>
                             <div class="designation">Manager</div>
                         </div>
                         <ul class="social-icon-two">
@@ -495,7 +495,7 @@
                     <div class="inner-box wow fadeInDown" data-wow-delay="200ms">
                         <div class="image"><a href="#"><img src="images/resource/team-3.jpg" alt=""></a></div>
                         <div class="lower-content">
-                            <h4> <a href="#">Merlin Judson</a></h4>
+                            <h4> <a href="#">Otim Sulaiman</a></h4>
                             <div class="designation">Ground Person</div>
                         </div>
                         <ul class="social-icon-two">
