--- a/blog.html
+++ b/blog.html
@@ -98,17 +98,17 @@
                                     
                                     <div class="collapse navbar-collapse">
                                         <ul class="navigation">
-                                            <li class="dropdown"><a href="index-2.html">Home</a>
-                                                <ul>
+                                            <li><a href="index.html">Home</a>
+                                               <!--  <ul>
                                                     <li><a href="index-2.html">Main Home</a></li>
                                                     <li><a href="index-3.html">Volunteer Home</a></li>
                                                     <li><a href="index-4.html">Charity Home</a></li>
                                                     <li><a href="index-5.html">Ecology Home</a></li>
                                                     <li><a href="index-6.html">Education Home</a></li>
-                                                </ul>
+                                                </ul> -->
                                             </li>
-                                            <li class="dropdown"><a href="#">Pages</a>
-                                                <ul>
+                                            <li><a href="about.html">About Us</a>
+                                                <!-- <ul>
                                                     <li><a href="about.html">About Us</a></li>
                                                     <li><a href="faq.html">FAQ’s</a></li>
                                                     <li><a href="team.html">Meet Our Team</a></li>
@@ -129,24 +129,24 @@
                                                             <li><a href="account.html">My Account</a></li>
                                                         </ul>
                                                     </li>
-                                                </ul>
+                                                </ul> -->
                                             </li>
-                                            <li class="dropdown"><a href="#">Causes</a>
-                                                <ul>
+                                            <li><a href="causes-2.html">Causes</a>
+                                               <!--  <ul>
                                                     <li><a href="causes-1.html">Style 01 - Grid View</a></li>
                                                     <li><a href="causes-2.html">Style 02 - List View</a></li>
                                                     <li><a href="causes-3.html">Style 01 - Carousel</a></li>
                                                     <li><a href="cause-details.html">Single Cause</a></li>
-                                                </ul>
+                                                </ul> -->
                                             </li>
-                                            <li class="dropdown"><a href="#">Events</a>
-                                                <ul>
+                                            <li><a href="events-1.html">Events</a>
+                                               <!--  <ul>
                                                     <li><a href="events-1.html">Events</a></li>
                                                     <li><a href="event-details.html">Single Event</a></li>
-                                                </ul>
+                                                </ul> -->
                                             </li>
-                                            <li class="dropdown current"><a href="#">Blog</a>
-                                                <ul>
+                                            <li><a href="blog.html">Blog</a>
+                                                <!-- <ul>
                                                     <li><a href="blog.html">Classic Grid View</a></li>
                                                     <li><a href="blog-fullwidth.html">Fullwidth Masonry</a></li>
                                                     <li><a href="blog-list.html">List With Sidebar</a></li>
