--- a/causes-2.html
+++ b/causes-2.html
@@ -4,7 +4,7 @@
 <!-- Goodsoul_html/causes-2.html  20 Nov 2019 03:31:26 GMT -->
 <head>
 <meta charset="utf-8">
-<title>Goodsoul HTML Template</title>
+<title>Heal African Orphans Charity </title>
 
 <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
 <link rel="icon" href="images/favicon.png" type="image/x-icon">
@@ -98,7 +98,7 @@
                                     
                                     <div class="collapse navbar-collapse">
                                         <ul class="navigation">
-                                            <li><a href="index-2.html">Home</a></li>
+                                            <li><a href="index.html">Home</a></li>
                                             <li><a href="about.html">About US</a></li>
                                             <li><a href="causes-2.html">Causes</a></li>
                                             <li><a href="events-1.html">Events</a></li>
@@ -261,10 +261,10 @@
     </section>
 
     <!-- Page Title -->
-    <section class="page-title" style="background-image:url(images/background/bg-13.jpg)">
+    <section class="page-title" style="background-image:url()">
         <div class="auto-container">
             <div class="content-box">
-                <h1>Causes Style 02</h1>
+                <h1>Donate to Our Causes</h1>
                 <ul class="bread-crumb">
                     <li><a class="home" href="index-2.html"><span class="fa fa-home"></span></a></li>
                     <li>Causes</li>
